syntax = "proto3";

package todo;

service TodoService {
  rpc CreateTodo (CreateTodoRequest) returns (TodoResponse);
  rpc GetTodos (GetTodosRequest) returns (TodoListResponse);
  rpc GetTodo (GetTodoRequest) returns (TodoResponse);
  rpc UpdateTodo (UpdateTodoRequest) returns (TodoResponse);
  rpc DeleteTodo (DeleteTodoRequest) returns (DeleteResponse);
  rpc ToggleTodo (ToggleTodoRequest) returns (TodoResponse);
}

message CreateTodoRequest {
  string userId = 1;
  string title = 2;
  string description = 3;
  string priority = 4;
  string dueDate = 5;
  repeated string tags = 6;
  string category = 7;
}

message GetTodosRequest {
  string userId = 1;
}

message GetTodoRequest {
  string todoId = 1;
  string userId = 2;
}

message UpdateTodoRequest {
  string todoId = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  string priority = 5;
  string dueDate = 6;
  repeated string tags = 7;
  string category = 8;
}

message DeleteTodoRequest {
  string todoId = 1;
  string userId = 2;
}

message ToggleTodoRequest {
  string todoId = 1;
  string userId = 2;
}

message Todo {
  string id = 1;
  string userId = 2;
  string title = 3;
  string description = 4;
  bool completed = 5;
  string priority = 6;
  string dueDate = 7;
  repeated string tags = 8;
  string category = 9;
  string createdAt = 10;
  string updatedAt = 11;
}

message TodoResponse {
  bool success = 1;
  string message = 2;
  Todo todo = 3;
}

message TodoListResponse {
  bool success = 1;
  repeated Todo todos = 2;
}

message DeleteResponse {
  bool success = 1;
  string message = 2;
}